--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.3.4
+dj-database-url==0.5.0
 Django==3.2
 django-allauth==0.41.0
+gunicorn==20.1.0
 oauthlib==3.1.0
+psycopg2-binary==2.9.1
 PyJWT==2.1.0
 python3-openid==3.2.0
 pytz==2021.1
